--- a/aerospace.toml
+++ b/aerospace.toml
@@ -86,10 +86,6 @@ cmd-shift-j = 'move down'
 cmd-shift-k = 'move up'
 cmd-shift-l = 'move right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-cmd-minus = 'resize smart -50'
-cmd-equal = 'resize smart +50'
-
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 cmd-1 = 'workspace 1'
 cmd-2 = 'workspace 2'
@@ -118,6 +114,16 @@ cmd-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 cmd-shift-semicolon = 'mode service'
+cmd-shift-r = 'mode resize'
 
 [mode.service.binding]
 r = ['reload-config', 'mode main']
+
+# See: https://nikitabobko.github.io/AeroSpace/commands#resize
+[mode.resize.binding]
+esc = ['mode main']
+r = ['balance-sizes', 'mode main']
+h = 'resize smart -50'
+l = 'resize smart +50'
+j = 'resize smart +50'
+k = 'resize smart -50'
