--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,3 +1,7 @@
-theme = dark:Builtin Tango Dark, light:Builtin Tango Light
+theme = Monokai Pro
 font-family = CommitMono
-font-size = 16
+font-size = 18
+
+# line height
+adjust-cell-height = 20
+adjust-cursor-height = 20
