--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,7 +1,12 @@
-theme = Monokai Pro
+# font & theme
+theme = catppuccin-frappe
 font-family = CommitMono
-font-size = 18
+font-size = 16
 
 # line height
 adjust-cell-height = 20
 adjust-cursor-height = 20
+
+# window padding
+window-padding-x = 10
+window-padding-y = 10
