--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,12 +1,16 @@
 # font & theme
-theme = catppuccin-frappe
+theme = dark:catppuccin-frappe,light:catppuccin-latte
 font-family = CommitMono
 font-size = 16
 
 # line height
-adjust-cell-height = 20
-adjust-cursor-height = 20
+adjust-cell-height = 10
+adjust-cursor-height = 10
 
 # window padding
-window-padding-x = 10
-window-padding-y = 10
+window-padding-x = 5
+window-padding-y = 5
+
+# window
+background-opacity = 0.9
+background-blur = 20
