--- a/ghostty/config
+++ b/ghostty/config
@@ -2,12 +2,12 @@
 theme = Dark Modern
 
 # typography
-font-family = CommitMono
+font-family = JetBrains Mono
 font-style  = Regular
 font-size   = 16
 
-adjust-cell-height   = 10
-adjust-cursor-height = 10
+adjust-cell-height   = 7
+adjust-cursor-height = 7
 adjust-cell-width    = -1
 
 # cursor
