Changed font from JetBrains mono to Agave

--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -1,13 +1,11 @@
 {
     // typography
     "editor.fontLigatures": true,
-    "editor.fontSize": 14,
-    "terminal.integrated.fontSize": 14,
-    "editor.fontFamily": "JetBrains Mono",
+    "editor.fontSize": 16,
+    "terminal.integrated.fontSize": 16,
+    "editor.fontFamily": "Agave",
     "editor.unicodeHighlight.includeStrings": false,
-    "terminal.integrated.fontFamily": "JetBrains Mono",
-    "terminal.integrated.lineHeight": 1.75,
-    "editor.lineHeight": 1.75,
+    "terminal.integrated.fontFamily": "Agave",
     "workbench.fontAliasing": "antialiased",
 
     // auto formatting
@@ -34,19 +32,16 @@
 
     // ai
     "cursor.cpp.disabledLanguages": [
-        "markdown",
         "plaintext"
     ],
 
     // layout
-    "window.zoomLevel": 2,
     "workbench.sideBar.location": "right",
     "workbench.activityBar.location": "top",
     "editor.stickyScroll.enabled": false,
     "breadcrumbs.enabled": false,
     "editor.lightbulb.enabled": "off",
     "workbench.tree.enableStickyScroll": false,
-    "workbench.panel.defaultLocation": "top",
     "workbench.layoutControl.enabled": false,
 
     // theme
